changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Few shop fixes:
1) limit total paid for unpaid items to be per item, not per group -
   otherwise, player just has to sell items in smaller bunches which
   doesn't make much sense.
2) Change the minor randomization of shop values to be based on
   map reset time - in this way, values will change slightly, bug
   if you are splitting a larger group, you will get consistent values
   (and if you logout and log back in, as long as the map hasn't reset,
   will also get same value)
3) Reset value strings for sold items to cap at platinum - fixes problem
   when selling valuable items that message said you got paid in jade
   coins, when in fact you did not.
MSW 2010-11-21

Enable traps to have unlimited uses, with the 'lifesave' flag.
Nicolas Weeger 2010-11-20

Automatically attempt to lockpick doors when not running.
This apparently doesn't alter readied spell or such, so should be ok.
Nicolas Weeger 2010-11-20

Fix bug 3028405 - Too high bargaining experience when selling containers -
due to variations in shop pricing (probably another bug), it can sometimes be
the case that bargaining skill results in a higher price (by 1 sp) - I think
this might just be a rounding error - however, since the value being used
was unsigned, this overflowed into high value, meaning high exp.  Change
that to unsigned, and now no overflow and not lots of exp.
MSW 2010-11-19

Add code to have identified objects merge together with like objects.
identify() modified to return object, which may be merged object.
examine() modified to stop processing once it does a skill ident