@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Allow cost_string_from_value() callers to specify maximum coin to use.
+This enables the guild script to display the account balance with amberium
+instead of platinum, while leaving shops in platinum.
+Nicolas Weeger 2010-11-22
+
 Few shop fixes:
 1) limit total paid for unpaid items to be per item, not per group -
    otherwise, player just has to sell items in smaller bunches which
